--- a/docs/package.json
+++ b/docs/package.json
@@ -4,12 +4,17 @@
   "main": "index.md",
   "license": "MIT",
   "scripts": {
-    "dev": "vitepress dev .",
+    "dev": "cd ./configs && node index.dev.ts && cd .. && vitepress dev .",
     "build": "vitepress build ."
   },
   "devDependencies": {
+    "@types/node": "^20.5.4",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.2",
+    "pug": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
     "vitepress": "^1.0.0-rc.4"
-  }
+  },
+  "dependencies": {}
 }
