--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docs:dev": "cd ./docs && yarn dev"
   },
   "dependencies": {
     "vue": "^3.3.4"
@@ -14,7 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "pug": "^3.0.2",
-    "typescript": "^5.0.2",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
   }
