--- a/docs/package.json
+++ b/docs/package.json
@@ -16,5 +16,7 @@
     "typescript": "^5.2.2",
     "vitepress": "^1.0.0-rc.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "element-plus": "^2.3.9"
+  }
 }
