--- a/docs/package.json
+++ b/docs/package.json
@@ -7,16 +7,20 @@
     "dev": "cd ./configs && node index.dev.ts && cd .. && vitepress dev .",
     "build": "vitepress build ."
   },
+  "dependencies": {
+    "element-plus": "^2.3.9"
+  },
   "devDependencies": {
     "@types/node": "^20.5.4",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.2",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
     "pug": "^3.0.2",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "vitepress": "^1.0.0-rc.4"
-  },
-  "dependencies": {
-    "element-plus": "^2.3.9"
+    "vitepress": "^1.0.0-rc.4",
+    "vue3-highlightjs": "^1.0.5"
   }
 }
